# altosRadarParserRos2

./: .gitignore  README.md  rviz.launch  start.sh  startBoth.sh  startRcu.sh  startV4.sh
src/altosparser/: CMakeLists.txt  altosradar.rviz  package.xml
src/altosparser/launch/: launchRcu.py  launchV4.py
src/altosparser/param/: altosParserParameters.yaml  altosParserRcu.yaml  altosParserV4.yaml
src/altosparser/src/: altos-pc-v2.h  altosparser.cpp
